[STREAM-1324] Add Slack, Github Action Logs & Slack AI Alerts  (#127)
* Update GitHub Actions workflow to reduce thread count and add extensive API integration documentation

- Changed thread count from 24 to 5 in GitHub Actions workflows for improved performance.
- Added comprehensive README files for various API integrations including Alchemy, NBA All Day, API Layer, Binance, and more.
- Introduced new UDFs and UDTFs for Groq and Slack API integrations, enhancing functionality and usability.
- Implemented tests for new UDFs and UDTFs to ensure reliability and correctness.
- Updated existing UDF definitions and added new tests for enhanced coverage and robustness.

* Refactor Slack UDFs to use webhook secret names and improve error handling

- Updated UDF definitions to replace WEBHOOK_URL and BOT_TOKEN with WEBHOOK_SECRET_NAME for enhanced security.
- Improved error messages for required parameters in the SQL logic.
- Standardized comments for clarity and consistency across UDFs.
- Ensured proper handling of user context for accessing secrets in the vault.

* update test

* fix test

* update slack

* remove test

* fix tests

* fix

* fix test args

* fix

* add .gitignore

* Add Slack Notification Macros and Enhance UDFs

- Introduced a new dbt macro for sending Slack notifications from GitHub Actions with AI-powered failure analysis.
- Added comprehensive README documentation for the new macro, detailing setup, configuration options, and usage examples.
- Implemented a SQL macro to handle Slack message formatting and sending, including support for AI analysis and threading.
- Updated existing UDFs to utilize webhook secret names for improved security and added detailed comments for clarity.
- Enhanced error handling and logging within the macros to ensure robust operation and easier debugging.

* update slack alerts

* update

* remove groq

* Enhance Slack Alert Macros with AI Analysis Features

- Updated README documentation to clarify AI provider options and

--- a/.github/workflows/dbt_udf_test.yml
+++ b/.github/workflows/dbt_udf_test.yml
@@ -34,15 +34,6 @@ concurrency:
   group: ${{ github.workflow }}
 
 jobs:
-  scheduled:
-    uses: ./.github/workflows/dbt.yml
-    if: github.event_name == 'schedule' || github.event_name == 'push'
-    secrets: inherit
-    with:
-      warehouse: ${{ vars.WAREHOUSE }}
-      environment: prod
-      command: dbt test --selector test_udfs --threads 24
-
   dispatched:
     uses: ./.github/workflows/dbt.yml
     if:  github.event_name == 'workflow_dispatch'
@@ -50,7 +41,7 @@ jobs:
     with:
       warehouse: ${{ inputs.warehouse }}
       environment: ${{ inputs.environment }}
-      command: dbt test --selector test_udfs --threads 24
+      command: dbt test --selector test_udfs_without_context --threads 5
 
   pull_request:
     uses: ./.github/workflows/dbt.yml
@@ -59,4 +50,4 @@ jobs:
     with:
       warehouse: ${{ vars.WAREHOUSE }}
       environment: dev
-      command: dbt test --selector test_udfs --threads 24
+      command: dbt test --selector test_udfs_without_context --threads 5
