--- a/.github/workflows/dbt_integration_test.yml
+++ b/.github/workflows/dbt_integration_test.yml
@@ -1,28 +1,17 @@
-name: integration test
+name: dbt_run_integration_test
 run-name: ${{ github.event.inputs.branch }}
 
 on:
   workflow_dispatch:
-  schedule:
-    # Runs “Daily at midnight GMT” (see https://crontab.guru)
-    - cron: '0 0 * * *'
 
 concurrency: ${{ github.workflow }}
 
 jobs:
-  test:
-    name: ${{ matrix.environment }}
-    uses: ./.github/workflows/dbt.yml
-    secrets: inherit
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - environment: hosted
-            warehouse: XSMALL
-          - environment: prod
-            warehouse: DBT_CLOUD
+  called_workflow_template:
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt.yml@main
     with:
-      warehouse: ${{ matrix.warehouse }}
-      environment: ${{ matrix.environment }}
-      command: dbt test -s test___utils_udf_introspect
+      command: >
+        dbt test --selector 'integration_tests'
+      environment:  ${{ github.ref == 'refs/heads/main' && 'workflow_prod' || 'workflow_dev' }}
+      warehouse: ${{ vars.WAREHOUSE }}
+    secrets: inherit
