--- a/.github/workflows/dbt_integration_test.yml
+++ b/.github/workflows/dbt_integration_test.yml
@@ -41,6 +41,6 @@ jobs:
     uses: ./.github/workflows/dbt.yml
     secrets: inherit
     with:
-      warehouse: ${{ github.event.inputs.environment == 'prod' && 'DBT_CLOUD' || 'XSMALL' }}
-      environment: ${{ github.event.inputs.environment }}
+      warehouse: ${{ (github.event.inputs.environment == 'prod' || github.event.inputs.environment == 'workflow_prod') && 'DBT_CLOUD' || 'XSMALL' }}
+      environment: ${{ github.event.inputs.environment == 'workflow_prod' && 'prod' || (github.event.inputs.environment == 'workflow_dev' && 'dev' || github.event.inputs.environment) }}
       command: dbt test -s test___utils_udf_introspect
