Update dbt integration test workflow to refine environment conditions
- Adjusted the warehouse selection logic to include 'workflow_dev' alongside 'workflow_prod' for using 'DBT_CLOUD'.
- Enhanced the environment assignment to ensure accurate mapping for 'workflow_dev' and 'workflow_prod', improving the workflow's clarity and functionality.

--- a/.github/workflows/dbt_integration_test.yml
+++ b/.github/workflows/dbt_integration_test.yml
@@ -41,6 +41,6 @@ jobs:
     uses: ./.github/workflows/dbt.yml
     secrets: inherit
     with:
-      warehouse: ${{ (github.event.inputs.environment == 'prod' || github.event.inputs.environment == 'workflow_prod') && 'DBT_CLOUD' || 'XSMALL' }}
+      warehouse: ${{ (github.event.inputs.environment == 'workflow_prod' || github.event.inputs.environment == 'workflow_dev') && 'DBT_CLOUD' || 'XSMALL' }}
       environment: ${{ github.event.inputs.environment == 'workflow_prod' && 'prod' || (github.event.inputs.environment == 'workflow_dev' && 'dev' || github.event.inputs.environment) }}
       command: dbt test -s test___utils_udf_introspect
